--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
-
+  <meta http-equiv="imagetoolbar" content="no" />
+  <title>Células Virtuais</title>
   <base href="/" />
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
